# fast-img-proc

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  bindings.cpp  main.cpp
docs/: Doxyfile.in  footer.html
include/: version.h.in
include/cpu/: gauss_blur.h  grayscale.h  hist_equalize.h  sobel_edge_detect.h
include/gpu/: grayscale.cuh  sobel_edge_detect.cuh
include/image/: image.h
include/logging/: logging.h
include/processing/: processor.h
scripts/: benchmark_edge_detect.py  check_sbl_edge.py  validate_sobel.py
src/: CMakeLists.txt
src/cpu/: gauss_blur.cpp  grayscale.cpp  hist_equalize.cpp  sobel_edge_detect.cpp
src/gpu/: grayscale.cu  sobel_edge_detect.cu
src/image/: image.cpp
src/logging/: CMakeLists.txt  logging.cpp
src/processing/: processor.cpp
tests/: CMakeLists.txt
tests/cpp/: test_cpu_processing.cpp  test_gpu_processing.cpp  test_image.cpp
tests/python/: test_processing.py
